--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav *ngIf="true">
   <ul class="pagination">
     <li 
       class="page-item"
@@ -6,13 +6,15 @@
     >
       <a class="page-link" (click)="currentPage = currentPage - 1">Prev</a>
     </li>
-    <li 
-      class="page-item"
-      [ngClass]="{ active: i === currentPage }"
-      *ngFor="let image of images; let i = index;"
-    >
-      <a (click)="currentPage = i" class="page-link">{{ i + 1 }}</a>
-    </li>
+    <ng-container *ngFor="let image of images; let i = index;">
+      <li 
+        class="page-item"
+        [ngClass]="{ active: i === currentPage }"
+        *ngIf="checkWindowIndex(i)"
+      >
+        <a (click)="currentPage = i" class="page-link">{{ i + 1 }}</a>
+      </li>
+    </ng-container>
     <li 
       class="page-item"
       [ngClass]="{ disabled: currentPage === images.length - 1 }"
