--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav *ngIf="true">
   <ul class="pagination">
-    <li 
+    <li
       class="page-item"
       [ngClass]="{ disabled: currentPage === 0 }"
     >
@@ -25,7 +25,7 @@
 </nav>
 
 <div>
-  <h4>{{ images[currentPage].title }}</h4>
+  <h4 appClass [backgroundColor]=" 'green' ">{{ images[currentPage].title }}</h4>
   <img [src]="images[currentPage].url">
 </div>
 
